# coindesigner

./: .cvsignore  .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  README.txt  TODO.txt  cdsview.pro  cdsview.vcproj  coindesigner.make  coindesigner.pro  coindesigner.sln  coindesigner.vcproj  coindesigner2.tag  coindesigner_es.ts  coindesigner_make.vcproj  octahedron.smf
README/: README_ivfix.txt  README_qhulllib.txt  README_voleon.txt
cmake-modules/: FindDime.cmake  FindSimage.cmake  Findsimage.cmake
demos/: demos.qrc  engine.iv  helloCone.iv  mirror.iv
docs/: README_qhull.txt
i18n/: coindesigner_ca_ES.ts  coindesigner_en_US.ts  coindesigner_es_ES.ts  update_ts.sh
images/: icons.qrc
images/nodes/: README
images/svg/: coindesigner.rc
include/: cds_globals.h  cds_parser.h  cds_util.h  cds_view.h  cds_viewers.h  cppexport_options.h  ivfix_options.h  mainwindow.h  mfield_editor.h  qslim_options.h  settingsDialog.h  src_editor.h  tetgen_options.h
include/qhulllib/: qhull.h  qhulllib.h  qinterface.h
src/: 3dsLoader.cpp  SoStream.cpp  assimp.cpp  assimp.h  assimpExport.cpp  assimpExport.h  assimpImport.cpp  assimpImport.h  cds_globals.cpp  cds_parser.cpp  cds_parser.h  cds_parser.y  cds_scanner.cpp  cds_scanner.l  cds_util.cpp  cds_util.h  cds_viewers.cpp  cds_viewers.h  cdsview.cpp  config.h.cmake  converter.cpp  converter.h  cppexport_options.cpp  cppexport_options.h  exporter.cpp  exporter.h  ivfix_options.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow2.cpp  mfield_editor.cpp  mfield_editor.h  qslim_options.cpp  qslim_options.h  settingsDialog.cpp  settingsDialog.h  src_editor.cpp  src_editor.h  tetgen_options.cpp  (+1 more)
src/ivfix/: IfCondenser.cpp  IfFixer.cpp  IfShape.cpp  IfStripper.cpp
src/qhulllib/: qh_geom.cpp  qh_geom.h  qh_geom2.cpp  qh_global.cpp  qh_io.cpp  qh_io.h  qh_mem.cpp  qh_mem.h  qh_merge.cpp  qh_merge.h  qh_poly.cpp  qh_poly2.cpp  qh_qset.cpp  qh_qset.h  qh_stat.cpp  qh_stat.h  qh_user.cpp  qhull.cpp  qhull.h  qhull_a.h  qhull_interface.cpp  qhulllib.cpp
test/: billboard.iv  colorCube.coff  colorCube.off  connections.iv  cow.iv  cow.iv.wrl  cow.off  cow.wrl  cow2.smf  demo1.iv  engine.iv  error.iv  espejo.iv  greenFilter.iv  octahedron.smf  shadertest_fragment.glsl  shadertest_vertex.glsl  vertCube.wrl  veryLargeScene.iv
translations/: coindesigner_es.qm  coindesigner_es.ts
ui/: cds_editor.ui  cds_view.ui  cppexport_options.ui  ivfix_options.ui  mainwindow.ui  mfield_editor.ui  qslim_options.ui  qslim_options4.ui  settingsDialog.ui  src_view.ui  tetgen_options.ui
version1.4/: .cvsignore  Changelog_en.txt  cdsFileDialog.h  cds_config.cpp  cds_config_form.cpp  cds_config_form.h  cds_viewers.cpp  cds_viewers.h  cdsview-vc8.vcproj  cdsview.cpp  cdsview.dsp  cdsview.vcproj  coindesigner-vc8.vcproj  coindesigner.pro  coindesigner_en.ts  coindesigner_es.ts  cppexport_options.ui  cppexport_options.ui.h  form1.ui  form1.ui.h  ivfix_options.ui  ivfix_options.ui.h  main.cpp  matrix_editor.ui  matrix_editor.ui.h  mfield_editor.ui  mfield_editor.ui.h  qslim_options.ui  qslim_options.ui.h  tetgen_options.cpp  tetgen_options.h
